cros fixes ui artifacts after going to PEEKING

Entering folder view then going to peeking used to
go into an undesired state, this was fixed in 767644.
This fix revealed a bug in how the AppListView was
resetting the folder view.

This CL contains a fix and a test.

Bug: 773785
Change-Id: I2b36f4a4020d984334d8ac6749d67577caede8b7
Reviewed-on: https://chromium-review.googlesource.com/714120
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Commit-Queue: Alex Newcomer <newcomer@chromium.org>
Cr-Commit-Position: refs/heads/master@{#508138}
Former-commit-id: 4dd2acbb826afea00dfcb339926ead7720d482ff